Prevent line wraps for wcsearch

--- a/Web Console/Search/wcsearch/css/style.css
+++ b/Web Console/Search/wcsearch/css/style.css
@@ -3,5 +3,5 @@ body {
 }
 li {
 	list-style: none;
-	white-space: pre-wrap;
+	white-space: pre;
 }
